# llm-trade-lab

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
configs/: entities.yaml
scripts/: alphavantage_news_demo.py  calibration_report.py  congress_demo.py  edgar_demo.py  end_to_end_demo.py  entity_resolver_demo.py  event_driven_e2e_demo.py  event_stream_demo.py  federal_register_demo.py  form4_demo.py  fred_demo.py  generate_hypothesis_demo.py  inspect_hypothesis.py  metrics_demo.py  portfolio_report.py  quality_report.py  rag_loop_demo.py  reddit_demo.py  resolve_events.py  retriever_demo.py
src/llm_trade_lab/: __init__.py
src/llm_trade_lab/backtest/: engine.py
src/llm_trade_lab/eval/: metrics.py  quality.py
src/llm_trade_lab/events/: event_stream.py  resolution.py
src/llm_trade_lab/llm/: client.py  generator.py  loop.py  prompts.py
src/llm_trade_lab/memory/: ledger.py  retriever.py
src/llm_trade_lab/portfolio/: sizing.py
src/llm_trade_lab/schema/: __init__.py  hypothesis.py
tests/: conftest.py  test_alphavantage_news.py  test_congress.py  test_edgar.py  test_entity_resolver.py  test_event_stream.py  test_federal_register.py  test_form4.py  test_fred.py  test_generator.py  test_llm_client.py  test_loop.py  test_metrics.py  test_portfolio.py  test_quality.py  test_reddit.py  test_resolution.py  test_retriever.py  test_smoke.py  test_ticker_health.py
