[project]
name = "llm-trade-lab"
version = "0.1.0"
description = "Phased experiment in fine-tuning open-source LLMs to generate trading hypotheses for US equities."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "backtesting>=0.3.3",
    "pydantic>=2.7.0",
    "numpy>=1.26.0,<2.0.0",
    "edgartools>=5.0.0",
    "python-dotenv>=1.0.0",
    "praw>=7.7.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_trade_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --basetemp=.pytest_tmp -m 'not integration'"
markers = [
    "integration: hits external services (SEC, Congress.gov, FRED, yfinance); opt-in via -m integration",
]

[tool.ruff]
line-length = 100
target-version = "py311"
